--- a/blogyek/.env
+++ b/blogyek/.env
@@ -1,1 +1,2 @@
-SECRET_KEY=fgf31r4wo#f083x5o(r*ea4q__tjre(21e5$8z1qz6ycsd983y
+SECRET_KEY=sdbv3as5d74bad3s5g87bvsd45v56fa7ds4bf75dfb4fx5247b6f4b54
+DATABASE_URL=postgres://blok_proekt_user:dGFEGAOXrV7GiVdyLYx6FZVfGY3tFXTw@dpg-cl3b9chnovjs73bfg540-a/blok_proekt
