--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 asgiref==3.3.1
 beautifulsoup4==4.9.3
 cssutils==2.2.0
-Django
+Django==3.2.16
 django-ckeditor==6.0.0
 django-cleanup==5.1.0
 django-etc==1.3.0
@@ -13,3 +13,5 @@ pynliner==0.8.0
 pytz==2021.1
 soupsieve==2.2.1
 sqlparse==0.4.1
+environ
+psycopg2-binary
