--- a/blogyek/.env
+++ b/blogyek/.env
@@ -1,2 +1,2 @@
 SECRET_KEY=sdbv3as5d74bad3s5g87bvsd45v56fa7ds4bf75dfb4fx5247b6f4b54
-DATABASE_URL=postgres://xusanbek_akuh_user:pMoKh9GBJKriN1fHZQc22LV7a3fp1b2Q@dpg-cl3c25hnovjs73bfqmeg-a/xusanbek_akuh
+DATABASE_URL=
