--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 SECRET_KEY=fgf31r4wo#f083x5o(r*ea4q__tjre(21e5$8z1qz6ycsd983y
-DATABASE_URL=postgres://xusanbek_abuk_user:WZpDfWCiLF1OGGHNxUCcFlMcVHfBheQK@dpg-cl39r1quuipc7389u55g-a/xusanbek_abuk
+DATABASE_URL=postgres://dsvsd_user:FHmQyidqsPBsfJipHsU0z7nsj4B2b6Fo@dpg-clhj8qd8td7s73bou520-a.oregon-postgres.render.com/dsvsd
