--- a/blogyek/.env
+++ b/blogyek/.env
@@ -1,2 +1,2 @@
 SECRET_KEY=sdbv3as5d74bad3s5g87bvsd45v56fa7ds4bf75dfb4fx5247b6f4b54
-DATABASE_URL=
+DATABASE_URL=postgres://dsvsd_user:FHmQyidqsPBsfJipHsU0z7nsj4B2b6Fo@dpg-clhj8qd8td7s73bou520-a/dsvsd
