--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.3.1
 beautifulsoup4==4.9.3
 cssutils==2.2.0
 Django
+dj_database_url
 django-ckeditor==6.0.0
 django-cleanup==5.1.0
 django-etc==1.3.0
@@ -20,3 +21,7 @@ whitenoise
 dj_database_url
 django-crispy-forms
 django-widget_tweaks
+whitenoise
+ckeditor
+django_cleanup
+django-crispy_forms
